--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "author": "Alessandro Feitoza",
   "require": {
-    "doctrine/orm": "^2.6"
+    "doctrine/orm": "^2.6",
+    "dompdf/dompdf": "^0.8.3"
   },
   "autoload": {
     "psr-4": {
